[package]
name = "simple-steam-totp"
description = "Generate Steam TOTP auth codes from Rust"
repository = "https://github.com/weilbyte/simple-steam-totp"
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
rust-crypto = "^0.2"